--- a/boards/nxp/vmu_rt1170/vmu_rt1170_mimxrt1176_cm7.dts
+++ b/boards/nxp/vmu_rt1170/vmu_rt1170_mimxrt1176_cm7.dts
@@ -170,6 +170,45 @@
 	current-speed = <115200>;
 };
 
+&lpuart6 {
+	status = "okay";
+	current-speed = <100000>;
+
+	sbus {
+		compatible = "futaba,sbus";
+		right_stick_x {
+			channel = <1>;
+			label = "Right stick x";
+			type = <INPUT_EV_ABS>;
+			zephyr,code = <INPUT_ABS_RX>;
+		};
+		right_stick_y {
+			channel = <2>;
+			label = "Right stick y";
+			type = <INPUT_EV_ABS>;
+			zephyr,code = <INPUT_ABS_RY>;
+		};
+		left_stick_x {
+			channel = <3>;
+			label = "Left stick x";
+			type = <INPUT_EV_ABS>;
+			zephyr,code = <INPUT_ABS_X>;
+		};
+		left_stick_y {
+			channel = <4>;
+			label = "Left stick y";
+			type = <INPUT_EV_ABS>;
+			zephyr,code = <INPUT_ABS_Y>;
+		};
+		kill_switch {
+			channel = <5>;
+			label = "Kill_switch";
+			type = <INPUT_EV_KEY>;
+			zephyr,code = <INPUT_KEY_0>;
+		};
+	};
+};
+
 
 &flexcan1 {
 	status = "okay";
