--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -66,6 +66,8 @@ source "drivers/pwm/Kconfig.rv32m1_tpm"
 
 source "drivers/pwm/Kconfig.mcux_tpm"
 
+source "drivers/pwm/Kconfig.mcux_gpt"
+
 source "drivers/pwm/Kconfig.sam0"
 
 source "drivers/pwm/Kconfig.npcx"
